Supressing misleading hibernate warnings